github_data_collector/src/data/issue_comment/moby_hyperkit.txt
Fix implicit conversion changes signedness and higher order bits are zeroes after implicit conversion issues. Most probably due to upgrade to Catalina.
Not sure if this is based on my `opam` environment or not but these dependencies were not found and were breaking local compilation.


Fixes #260 using example provided in comments from xhyve project.

Builds and local `make test` passes, I am not an expert in this code so needs some review.
Issue #246 was not fixed by the e499d90 commit referenced in marking it closed.

I am seeing this error on the latest master (c0dd463).

```
gen src/lib/dtrace.d
cc src/lib/vmm/intel/vmcs.c
cc src/lib/vmm/intel/vmx.c
src/lib/vmm/intel/vmx.c:1368:34: error: implicit conversion changes signedness: 'enum vm_reg_name' to 'int' [-Werror,-Wsign-conversion]
        error = vmx_getreg(vmx, vcpuid, reg, &val);
                ~~~~~~~~~~              ^~~
src/lib/vmm/intel/vmx.c:1419:40: error: implicit conversion changes signedness: 'enum vm_reg_name' to 'int' [-Werror,-Wsign-conversion]
        error = vmx_getdesc(vmx, vcpuid, vis->seg_name, &vis->seg_desc);
                ~~~~~~~~~~~              ~~~~~^~~~~~~~
2 errors generated.
make: *** [build/lib/vmm/intel/vmx.o] Error 1
```

λ  sw_vers
ProductName:	Mac OS X
ProductVersion:	10.14.6
BuildVersion:	18G87

λ xcodebuild -version
Xcode 11.0
Build version 11A420a

λ cc --version
Apple clang version 11.0.0 (clang-1100.0.33.8)
Target: x86_64-apple-darwin18.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
On macOS 10.15 Catalina and later applications need to be [Notarized](https://developer.apple.com/documentation/security/notarizing_your_app_before_distribution#3087722) where notarization is an Apple malware- and security-check of the released binaries.

As part of the notarization process, Apple require that [hardened runtime](https://help.apple.com/xcode/mac/current/#/devf87a2ac8f) is enabled. This prevents
- code injection into running processes
- attaching debuggers
- allocating writable + executable memory

Currently `hyperkit` uses `valloc` to allocate memory for the VM and then grants the VM `READ`, `WRITE` and `EXECUTE`, which will fail if the hardened runtime is enabled.

One workaround is to grant the `hyperkit` binary the [Allow Unsigned Executable Memory Entitlement](https://developer.apple.com/documentation/bundleresources/entitlements/com_apple_security_cs_allow-unsigned-executable-memory) which disables the writable+executable check for all allocations done by the process.

This patch proposes another workaround, which is to switch from using `valloc` to `mmap` with the special flag `MAP_JIT`. This allows us to use the weaker [Allow Execution of JIT-compiled Code](https://developer.apple.com/documentation/bundleresources/entitlements/com_apple_security_cs_allow-jit) entitlement, so that only the VM memory allocation is writable+executable, other allocations are not.

Note that, according to the mono project https://github.com/mono/mono/commit/a502768b3a24f4251de6a48ba78a27c898968e63 the `MAP_JIT` flag causes problems with older version of macOS, so they recommend only enabling it for Mojave and later.

Note that enabling the hardened runtime and adding entitlements is done at the `codesign` stage which means we can't easily test this from the current CI as the binaries are unsigned.
When running the 
` opam install uri qcow.0.10.4 conduit.1.0.0 lwt.3.1.0 qcow-tool mirage-block-unix.2.9.0 conf-libev logs fmt mirage-unix  prometheus-app`
 I received the following error that my OCaml was to new 4.08.0.  
So I had to do `opam switch create ocaml-base-compiler 4.07.1` and reran the code.    
how to uninstall hyperkit , capture higt cup percentage . thanks 
This is the crash stack from the docker logs:
.....
2019-01-13 13:05:13.434372-0800  localhost com.docker.hyperkit[2914]: [    0.105693] Speculative Store Bypass: Vulnerable
2019-01-13 13:05:13.577543-0800  localhost com.docker.hyperkit[2914]: [    0.249247] Freeing SMP alternatives memory: 20K
2019-01-13 13:05:13.707308-0800  localhost com.docker.hyperkit[2914]: [    0.376386] ftrace: allocating 35645 entries in 140 pages
2019-01-13 13:05:15.855677-0800  localhost com.docker.hyperkit[2914]: [    2.532161] smpboot: Max logical packages: 2
2019-01-13 13:05:15.882920-0800  localhost com.docker.hyperkit[2914]: [    2.557769] ..TIMER: vector=0x30 apic1=0 pin1=2 apic2=-1 pin2=-1
2019-01-13 13:05:15.992164-0800  localhost com.docker.hyperkit[2914]: [    2.666219] ..MP-BIOS bug: 8254 timer not connected to IO-APIC
2019-01-13 13:05:15.998739-0800  localhost com.docker.hyperkit[2914]: [    2.673452] ...trying to set up timer (IRQ0) through the 8259A ...
2019-01-13 13:05:16.003099-0800  localhost com.docker.hyperkit[2914]: [    2.680027] ..... (found apic 0 pin 2) ...
2019-01-13 13:05:16.108382-0800  localhost com.docker.hyperkit[2914]: [    2.786819] ....... failed.
2019-01-13 13:05:16.114403-0800  localhost com.docker.hyperkit[2914]: [    2.789899] ...trying to set up timer as Virtual Wire IRQ...
2019-01-13 13:05:16.218349-0800  localhost com.docker.hyperkit[2914]: [    2.896338] ..... failed.
2019-01-13 13:05:16.224222-0800  localhost com.docker.hyperkit[2914]: [    2.900103] ...trying to set up timer as ExtINT IRQ...
2019-01-13 13:05:16.442003-0800  localhost com.docker.hyperkit[2914]: [    3.121066] ..... failed :(.
2019-01-13 13:05:16.456839-0800  localhost com.docker.hyperkit[2914]: [    3.125149] Kernel panic - not syncing: IO-APIC + timer doesn't work!  Boot with apic=debug and send a report.  Then try booting with the 'noapic' option.
2019-01-13 13:05:16.458492-0800  localhost com.docker.hyperkit[2914]: [    3.125149]
2019-01-13 13:05:16.465514-0800  localhost com.docker.hyperkit[2914]: [    3.140709] CPU: 0 PID: 1 Comm: swapper/0 Not tainted 4.9.125-linuxkit #1
2019-01-13 13:05:16.471039-0800  localhost com.docker.hyperkit[2914]: [    3.147726] Hardware name:  BHYVE, BIOS 1.00 03/14/2014
2019-01-13 13:05:16.480892-0800  localhost com.docker.hyperkit[2914]: [    3.153287]  0000000000000000 ffffffffaf420789 0000000000000000 ffffbab400007e30
2019-01-13 13:05:16.490131-0800  localhost com.docker.hyperkit[2914]: [    3.163238]  ffffffffaf19fbf5 0000000000000008 ffffbab400007e40 ffffbab400007dd8
2019-01-13 13:05:16.501249-0800  localhost com.docker.hyperkit[2914]: [    3.172450]  ca7f16cd286c8b68 0000000000000008 ffffbab400007e58 0000000000000000
2019-01-13 13:05:16.504028-0800  localhost com.docker.hyperkit[2914]: [    3.183596] Call Trace:
2019-01-13 13:05:16.509580-0800  localhost com.docker.hyperkit[2914]: [    3.186327]  [<ffffffffaf420789>] ? dump_stack+0x5a/0x6f
2019-01-13 13:05:16.514995-0800  localhost com.docker.hyperkit[2914]: [    3.191881]  [<ffffffffaf19fbf5>] ? panic+0xe7/0x230
2019-01-13 13:05:16.521318-0800  localhost com.docker.hyperkit[2914]: [    3.197336]  [<ffffffffafd8fb85>] ? setup_IO_APIC+0x633/0x6d1
2019-01-13 13:05:16.528372-0800  localhost com.docker.hyperkit[2914]: [    3.203685]  [<ffffffffaf03ad15>] ? clear_IO_APIC_pin+0x108/0x135
2019-01-13 13:05:16.535932-0800  localhost com.docker.hyperkit[2914]: [    3.210752]  [<ffffffffafd8e95c>] ? apic_bsp_setup+0x8a/0x99
2019-01-13 13:05:16.543870-0800  localhost com.docker.hyperkit[2914]: [    3.218357]  [<ffffffffafd8c98d>] ? native_smp_prepare_cpus+0x24a/0x2ef
2019-01-13 13:05:16.550666-0800  localhost com.docker.hyperkit[2914]: [    3.226272]  [<ffffffffafd79fd3>] ? kernel_init_freeable+0xa2/0x1ea
2019-01-13 13:05:16.557199-0800  localhost com.docker.hyperkit[2914]: [    3.233084]  [<ffffffffafd79fd3>] ? kernel_init_freeable+0xa2/0x1ea
2019-01-13 13:05:16.562795-0800  localhost com.docker.hyperkit[2914]: [    3.239635]  [<ffffffffaf7dd6b7>] ? rest_init+0x6e/0x6e
2019-01-13 13:05:16.568904-0800  localhost com.docker.hyperkit[2914]: [    3.245243]  [<ffffffffaf7dd6c1>] ? kernel_init+0xa/0xe6
2019-01-13 13:05:16.575027-0800  localhost com.docker.hyperkit[2914]: [    3.251341]  [<ffffffffaf7e7677>] ? ret_from_fork+0x57/0x70
2019-01-13 13:05:16.582010-0800  localhost com.docker.hyperkit[2914]: [    3.258727] Rebooting in 1 seconds..

I am following instructions here:

https://github.com/moby/hyperkit#building

and get this error:

```bash
$ opam install uri qcow.0.10.3 conduit.1.0.0 lwt.3.1.0 qcow-tool mirage-block-unix.2.9.0 conf-libev logs fmt mirage-unix prometheus-app
The following dependencies couldn't be met:
  - qcow-tool → qcow >= 0.10.4
  - qcow-tool → sha = 1.9 → ocaml < 4.06.0
      base of this switch (use `--unlock-base' to force)
Your request can't be satisfied:
  - No available version of qcow satisfies the constraints

No solution found, exiting
```
If hyperkit is launched with the -A flag and no PCI devices, it crashes.

In the code below, taken from `src/lib/pci_emul.c`, `bi` gets dereferenced even though it's NULL.

	static void
	pci_bus_write_dsdt(int bus)
	{
		struct businfo *bi;

		/*
		 * If there are no devices on this 'bus' then just return.
		 */
		if ((bi = pci_businfo[bus]) == NULL) {
			/*
			 * Bus 0 is special because it decodes the I/O ports used
			 * for PCI config space access even if there are no devices
			 * on it.
			 */
			if (bus != 0)
				return;
		}

		dsdt_fixup(bus, bi->iobase, bi->iolimit, bi->membase32, bi->memlimit32,
			bi->membase64, bi->memlimit64);

		(void) pci_pirq_prt_entry;
		(void) pci_apic_prt_entry;
	}